# projectGenerate

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
include/: projectGenerate.hpp
src/: main.cpp
